[gd_scene load_steps=9 format=3 uid="uid://cf6wc24otbh55"]

[ext_resource type="Script" path="res://Scenes/Encyclopedia.gd" id="1_har18"]
[ext_resource type="Texture2D" uid="uid://caf8f8j76hs22" path="res://Assets/icons/220px-Flag-corsairs.png" id="2_l3bbr"]
[ext_resource type="Texture2D" uid="uid://bnbeekjq0oj7i" path="res://Assets/icons/encyclopRest.png" id="3_1d018"]
[ext_resource type="Texture2D" uid="uid://ce7enbfrynqcv" path="res://Assets/icons/220px-Flag-kusari.png" id="3_dfqf2"]
[ext_resource type="Texture2D" uid="uid://biw5ylg32keg" path="res://Assets/icons/220px-Flag-outcasts.png" id="4_s55x0"]
[ext_resource type="Texture2D" uid="uid://cs0qld0oetw1a" path="res://Assets/icons/encyclopPressed.png" id="4_srgf0"]
[ext_resource type="Texture2D" uid="uid://cyyuw5no0i7nv" path="res://Assets/icons/strogg.png" id="5_eomnt"]
[ext_resource type="Script" path="res://Scenes/Wiki.gd" id="8_iegy2"]

[node name="Encyclopedia" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_har18")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1140.0
offset_bottom = 540.0

[node name="Close" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1088.0
offset_top = 2.0
offset_right = 1138.0
offset_bottom = 33.0
text = "Close"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 1084.0
offset_bottom = 483.0

[node name="Doria" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Doria"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 152.0
grow_horizontal = 2
texture = ExtResource("2_l3bbr")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Doria"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Dorian League"
horizontal_alignment = 1

[node name="Button" type="TextureButton" parent="Panel/HBoxContainer/Doria"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_1d018")
texture_pressed = ExtResource("4_srgf0")
stretch_mode = 0

[node name="Ionia" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Ionia"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 152.0
grow_horizontal = 2
texture = ExtResource("3_dfqf2")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Ionia"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Ionian Sector"
horizontal_alignment = 1

[node name="Button2" type="TextureButton" parent="Panel/HBoxContainer/Ionia"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_1d018")
texture_pressed = ExtResource("4_srgf0")
stretch_mode = 0

[node name="IW" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/IW"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 152.0
grow_horizontal = 2
texture = ExtResource("4_s55x0")

[node name="Label" type="Label" parent="Panel/HBoxContainer/IW"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Independent Worlds"
horizontal_alignment = 1

[node name="Button3" type="TextureButton" parent="Panel/HBoxContainer/IW"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_1d018")
texture_pressed = ExtResource("4_srgf0")
stretch_mode = 0

[node name="Strogg" type="Panel" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/Strogg"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 152.0
grow_horizontal = 2
texture = ExtResource("5_eomnt")

[node name="Label" type="Label" parent="Panel/HBoxContainer/Strogg"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Strogg"
horizontal_alignment = 1

[node name="Button4" type="TextureButton" parent="Panel/HBoxContainer/Strogg"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_1d018")
texture_pressed = ExtResource("4_srgf0")
stretch_mode = 0

[node name="Wiki" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 48.0
offset_right = 1062.0
offset_bottom = 485.0

[node name="Panel" type="Panel" parent="Panel/Wiki"]
custom_minimum_size = Vector2(1050, 0)
layout_mode = 2
script = ExtResource("8_iegy2")

[node name="Panel" type="Panel" parent="Panel/Wiki/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/Wiki/Panel"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
offset_left = 13.0
offset_top = 38.0
offset_right = 804.0
offset_bottom = 438.0
size_flags_horizontal = 4
horizontal_scroll_mode = 0

[node name="Descriptions" type="RichTextLabel" parent="Panel/Wiki/Panel/ScrollContainer"]
custom_minimum_size = Vector2(654.75, 0)
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Details" type="Label" parent="Panel/Wiki/Panel"]
layout_mode = 0
offset_left = 841.0
offset_top = 179.0
offset_right = 1010.0
offset_bottom = 433.0
autowrap_mode = 3

[node name="Icon" type="TextureRect" parent="Panel/Wiki/Panel"]
layout_mode = 0
offset_left = 823.0
offset_top = 17.0
offset_right = 995.0
offset_bottom = 164.0

[node name="return" type="Button" parent="Panel/Wiki/Panel"]
layout_mode = 2
offset_left = 4.0
offset_right = 65.0
offset_bottom = 31.0
grow_horizontal = 0
grow_vertical = 0
text = "Return"

[connection signal="pressed" from="Panel/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Doria/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Ionia/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/IW/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Strogg/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Panel/Wiki/Panel/return" to="." method="_on_return_pressed"]
